--- a/src/App.scss
+++ b/src/App.scss
@@ -1,32 +1,23 @@
+$font:  'Karla', sans-serif;
 .App {
   text-align: center;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 100px 1fr;
+  grid-template-areas: "header header header" "content content content" "footer footer footer";
+  font-family: $font;
+  a {
+    color: black;
+    text-decoration: none;
+    &:visited {
+        color: black;
+    }   
+    &:hover { 
+        color: gray;
+    }
+}
+}
+.content {
+  grid-area: content;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
