--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,6 @@
+@import "~slick-carousel/slick/slick.css";
+@import "~slick-carousel/slick/slick-theme.css";
+
 $font:  'Karla', sans-serif;
 .App {
   text-align: center;
