--- a/src/Components/Nav/Nav.scss
+++ b/src/Components/Nav/Nav.scss
@@ -5,6 +5,7 @@
     background: white;
     grid-area: header;
     width: 100%;
+    height: 90px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-areas: "left middle right";
@@ -60,11 +61,12 @@ ul {
     }
     .bm-overlay {
         background: white !important;
-        height: 200px !important;
+        height: 160px !important;
     }
     .bm-menu {
-        height: 200px !important;
+        height: 160px !important;
         overflow: hidden !important;
+        margin-top: -20px !important;
     }
     .bm-menu-wrap {
         width: 100% !important ;
