added breadmin screenshots. tidied up the work page. fixed mobile menu to have overlay that grays out background content

--- a/src/Components/Nav/Nav.scss
+++ b/src/Components/Nav/Nav.scss
@@ -60,13 +60,14 @@ ul {
         display: block;
     }
     .bm-overlay {
-        background: white !important;
-        height: 160px !important;
+        background: gray !important;
+        opacity: .5 !important;
     }
     .bm-menu {
-        height: 160px !important;
+        height: 180px !important;
         overflow: hidden !important;
         margin-top: -20px !important;
+        background: white;
     }
     .bm-menu-wrap {
         width: 100% !important ;
