--- a/src/Components/About/About.scss
+++ b/src/Components/About/About.scss
@@ -1,17 +1,51 @@
 @import '../../cfg/cfg.scss';
 
-.about {    
+.about {  
+    grid-area: content;
+    max-height: 90vh;
     margin: 0 auto;
+    padding-left: 20px;
+    padding-right: 20px;
     @media screen and (max-width: $med-breakpoint) {
         img {
         max-height: 75vh;
-        max-height: 75vw;
+        max-width: 75vw;
+        }
+    }
+    h1 {
+        margin-top: 0px;
+        font-size: 40px;    
+        text-shadow: 0 1px 2px rgba(0, 0, 0, 0.20);
+    }
+    p {
+        color: gray;
+        text-align: justify;
+        max-width: 60vw;
+        font-size: 30px;
+        margin: 0 auto;
+        padding-bottom: 25px;
+        @media screen and (max-width: $lrg-breakpoint) {
+            max-width: 80vw;
+        }
+        @media screen and (max-width: $med-breakpoint) {
+            font-size: 20px;   
+        }
+        @media screen and (max-width: $sml-breakpoint) {
+            max-width: 100%;
         }
     }
     a {
-        padding: 10px;
+        font-size: 30px;
+        padding: 20px;
+        text-shadow: 0 1px 2px rgba(0, 0, 0, 0.20);
+        @media screen and (max-width: $med-breakpoint) {
+            font-size: 20px;   
+        }
     }
     img {
-        border-radius: 50%
+        max-height: 50vh;
+        max-width: 50vw;
+        border-radius: 50%;
+        padding-top: 20px;
     }
 }
