--- a/src/Components/Work/Work.scss
+++ b/src/Components/Work/Work.scss
@@ -5,18 +5,23 @@
         display: block;
     }
     .work-example {
+        box-shadow: 0px 2px 4px rgba(0,0,0, 0.18);
         width: 65vw;
         margin: 0 auto;
-        padding: 30px;
+        margin-bottom: 20px;
+        padding-bottom: 30px;
+        padding-top: 30px;
         @media screen and (max-width: $lrg-breakpoint) {
             width: 85vw;       
         }
         @media screen and (max-width: $sml-breakpoint) {
             width: 80vw;       
         }
+        h2 {
+        }
         img {
             width: 100%;
-            height: 60vh;
+            height: 70vh;
             object-fit: scale-down;
             @media screen and (max-width: $lrg-breakpoint) {
                 height: 45vh;
@@ -24,6 +29,11 @@
             @media screen and (max-width: $sml-breakpoint) {
                 height: 25vh;
             }
+        }
+        p { 
+            font-size: 20px;
+            margin: 0 auto;
+            width: 65%;
         }
         .slick-dots {
             text-align: center;
