--- a/src/Components/Work/Work.scss
+++ b/src/Components/Work/Work.scss
@@ -49,5 +49,14 @@
                 color: black;
             }      
          }  
+         .work-example-links {
+             margin-top: 20px;
+             a {
+                 color: gray;
+                 display: inline;
+                 font-size: 24px;
+                 padding: 50px;
+             }
+         }
     }
 }
