--- a/src/Components/About/About.scss
+++ b/src/Components/About/About.scss
@@ -40,12 +40,16 @@
         @media screen and (max-width: $med-breakpoint) {
             font-size: 20px;   
         }
-        color: gray;
     }
     img {
         max-height: 50vh;
         max-width: 50vw;
         border-radius: 50%;
         padding-top: 20px;
+    }
+    .about-links {
+        a {
+            color: gray;
+        }
     }
 }
